# FFStudio

./: .gitignore  CMakeLists.txt  README.md
docs/: ffstudio.mdj
